# CPP-High-Performance-Order-Matching-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  order_matching_engine.cpp
include/: book.hpp  enhanced_matching_engine.hpp  feed_handler.hpp  instrument.hpp  market_data.hpp  matching_engine.hpp  multi_instrument_engine.hpp  numa_allocator.hpp  numa_order_pool.hpp  order_pool.hpp  risk_manager.hpp  spsc_ring_buffer.hpp  types.hpp
src/: book.cpp  enhanced_matching_engine.cpp  feed_handler.cpp  main.cpp  market_data.cpp  matching_engine.cpp  multi_instrument_engine.cpp  order_pool.cpp  risk_manager.cpp  spsc_ring_buffer.cpp  types.cpp
tests/: CMakeLists.txt
tests/integration/: test_matching_engine.cpp
tests/unit/: test_order_pool.cpp  test_price_level.cpp  test_spsc_ring_buffer.cpp
